welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:7: error: not found: value baggleSeen
		baggleSeen = baggleSeen + 1;
                ^