welcome.lessons.welcome.variables.RunFour.scala.code
var bagglesSeen: Int = 0;

while(bagglesSeen != 4) {
	forward();
	if(isOverBaggle()) {
		baggleSeen = baggleSeen + 1;
	}
}
